fixed spacing

--- a/project code/public/css/style.css
+++ b/project code/public/css/style.css
@@ -24,17 +24,19 @@ ul.tabs li.current{
 }
 
 #bio{
+position: relative;
+top: 20px;
 background-color: #cec4cb;
 margin-top: 0px;
   width: 320px;
-  height: 570px;
+  height: 550px;
   border: 5px solid black;
 }
 
 #tree-description{
 margin-top: 10px;
 margin-right: 20px;
-  width: 500px;
+  width: 350px;
   height: 570px;
 }
 
